--- a/hobbies.html
+++ b/hobbies.html
@@ -14,6 +14,9 @@
         <li>2021: Communication Agent of the nature roots society</li>
         <li>2022: worked as a JavaScript developer at UnityTechnologies</li>
         <li>2022: worked as a JavaScript developer at UnityTechnologies</li>
+        <li>Sports: Jogging, Soccer, Swimming, Fitness, Long Tennis</li>
+        <li>Qualities: Hardworking, Dynamic, Patient, Helpful, Sociable, Team spirit, Loyal, Respectful </li>
+        <li>Interest:  Humanitarian, Reading, Music, programming</li>
     </ul>
 </body>
 </html>
