--- a/index.html
+++ b/index.html
@@ -33,5 +33,12 @@
         <li>IT: Office Pack, Digital Marketing (Facebook, Twitter, Instagram), Programmer(Html, Css, JavaScript, Python)</li>
         <li>Logistics</li>
     </ul>
+
+    <a href="contact.html">Contact Me</a><br>
+    <a href="hobbies.html">Hubbies</a>
+
+    <footer>
+        <p>© 2023 Tipa Brandon </p>
+    </footer>
 </body>
 </html>
